--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   "author": "Pinklesh Parjapati",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "elasticsearch": "^16.7.3",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "sequelize": "^6.33.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
